Alt tag added and some transitions

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </nav>
           <img
             src="./images/illustration-intro.png"
-            alt=""
+            alt="illustration-intro"
             class="header__img"
           />
           <section class="header__info">
@@ -59,7 +59,7 @@
               Access them wherever you need, share and collaborate with friends
               family, and co-workers.
             </p>
-            <a href="" class="btn__cta">Get Started</a>
+            <a href="" class="btn__cta btn-hover">Get Started</a>
           </section>
         </header>
       </div>
@@ -68,7 +68,7 @@
           <article class="features__box">
             <img
               src="./images/icon-access-anywhere.svg"
-              alt=""
+              alt="icon-access-anywhere"
               class="features__img access-anywhere-img"
             />
             <h3 class="features__box-heading">
@@ -82,7 +82,7 @@
           <article class="features__box">
             <img
               src="./images/icon-security.svg"
-              alt=""
+              alt="icon-security"
               class="features__img"
             />
             <h3 class="features__box-heading">
@@ -97,7 +97,7 @@
           <article class="features__box">
             <img
               src="./images/icon-collaboration.svg"
-              alt=""
+              alt="icon-collaboration"
               class="features__img"
             />
             <h3 class="features__box-heading">
@@ -111,7 +111,7 @@
           <article class="features__box">
             <img
               src="./images/icon-any-file.svg"
-              alt=""
+              alt="icon-any-file"
               class="features__img"
             />
             <h3 class="features__box-heading">
@@ -128,7 +128,7 @@
           <article class="mid-section__img">
             <img
               src="./images/illustration-stay-productive.png"
-              alt=""
+              alt="illustration-stay-productive"
               class="mid-section__image"
             />
           </article>
@@ -148,7 +148,7 @@
               See how Fylo works<span
                 ><img
                   src="./images/icon-arrow.svg"
-                  alt=""
+                  alt="arrow icon"
                   class="arrow" /></span
             ></a>
           </article>
@@ -161,7 +161,7 @@
             <div class="testimonials__profiles">
               <img
                 src="./images/profile-1.jpg"
-                alt=""
+                alt="Satish Patel Image"
                 class="testimonials__profiles-img"
               />
               <div class="testimonials__profiles-info">
@@ -181,7 +181,7 @@
             <div class="testimonials__profiles">
               <img
                 src="./images/profile-2.jpg"
-                alt=""
+                alt="Bruce McKenzie Image"
                 class="testimonials__profiles-img"
               />
               <div class="testimonials__profiles-info">
@@ -201,7 +201,7 @@
             <div class="testimonials__profiles">
               <img
                 src="./images/profile-3.jpg"
-                alt=""
+                alt="Iva Boyd Image"
                 class="testimonials__profiles-img"
               />
               <div class="testimonials__profiles-info">
@@ -229,17 +229,17 @@
             class="signup-form__input"
             placeholder="example@example.com"
           />
-          <a href="" class="signup-form__btn">Get Started For Free</a>
+          <a href="" class="signup-form__btn btn-hover">Get Started For Free</a>
         </section>
         <br />
       </main>
     </div>
     <footer class="footer">
-      <img src="./images/logo.svg" alt="" class="footer__logo" />
+      <img src="./images/logo.svg" alt="footer logo" class="footer__logo" />
       <div class="footer__content">
         <article class="footer__about">
           <p>
-            <img src="./images/icon-location.svg" alt="" />
+            <img src="./images/icon-location.svg" alt="icon-location" />
             <span
               >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua</span
@@ -247,8 +247,18 @@
           </p>
         </article>
         <article class="footer__contact">
-          <p><img src="./images/icon-phone.svg" alt="" />+1-543-123-4567</p>
-          <p><img src="./images/icon-email.svg" alt="" />example@fylo.com</p>
+          <p>
+            <img
+              src="./images/icon-phone.svg"
+              alt="icon-phone"
+            />+1-543-123-4567
+          </p>
+          <p>
+            <img
+              src="./images/icon-email.svg"
+              alt="icon-email"
+            />example@fylo.com
+          </p>
         </article>
         <article class="footer__nav-1">
           <ul>
