fixed some issues

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
             type="email"
             class="signup-form__input"
             placeholder="example@example.com"
+            name="email"
           />
           <a href="" class="signup-form__btn btn-hover">Get Started For Free</a>
         </section>
@@ -276,9 +277,15 @@
           </ul>
         </article>
         <article class="footer__social">
-          <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
-          <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
-          <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+          <a href="https://facebook.com"
+            ><ion-icon name="logo-facebook"></ion-icon
+          ></a>
+          <a href="https://twitter.com"
+            ><ion-icon name="logo-twitter"></ion-icon
+          ></a>
+          <a href="https://instagram.com"
+            ><ion-icon name="logo-instagram"></ion-icon
+          ></a>
         </article>
       </div>
     </footer>
